[package]
name = "inohashmap"
version = "0.2.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"
description = "fast and efficient insert only string hashmap"
license = "MIT"
keywords = ["hashmap", "string", "hash", "fnv", "compact"]
include = ["src/**/*", "LICENSE", "README.md"]

[dev-dependencies]
fnv = "1.0.7"
tantivity_term_map = { path = "./tantivity_term_map" }

[profile.bench]
codegen-units = 1
debug = true

[profile.release]
codegen-units = 1
debug = true

[dependencies]
vint32 = "0.1.0"
